examples/gloo/1-gloo-deployment.yaml
---
# Source: gloo/templates/1-gloo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gloo
    gloo: gloo
  name: gloo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      gloo: gloo
  template:
    metadata:
      labels:
        gloo: gloo
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9091"
        prometheus.io/scrape: "true"
        gloo.solo.io/oss-image-tag: 1.15.6
    spec:

      serviceAccountName: gloo
      volumes:
      - name: labels-volume
        downwardAPI:
          items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
      - name: validation-certs
        secret:
          defaultMode: 420
          secretName: gateway-validation-certs
      containers:
      - image: quay.io/solo-io/gloo:1.15.6
        imagePullPolicy: IfNotPresent
        name: gloo
        resources:
          requests:
            cpu: 500m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10101
        ports:
        - containerPort: 9977
          name: grpc-xds
          protocol: TCP
        - containerPort: 9976
          name: rest-xds
          protocol: TCP
        - containerPort: 9988
          name: grpc-validation
          protocol: TCP
        - containerPort: 9966
          name: grpc-proxydebug
          protocol: TCP
        - containerPort: 9979
          name: wasm-cache
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/gateway/validation-certs
          name: validation-certs
        - name: labels-volume
          mountPath: /etc/gloo
          readOnly: true
        readinessProbe:
          tcpSocket:
            port: 9977
          initialDelaySeconds: 3
          periodSeconds: 10
          failureThreshold: 3
